testsuite/deprecated/veronac/typechecking/compile-fail/freeze.verona
// Copyright Microsoft and Project Verona Contributors.
// SPDX-License-Identifier: MIT
class A { }

class Main
{
  main() { }

  // CHECK-L: freeze.verona:${LINE:+1}:3: error: Inference failed for method test1
  test1(x: A & imm) {
    Builtin.freeze(x);
  }

  // CHECK-L: freeze.verona:${LINE:+1}:3: error: Inference failed for method test2
  test2[X](x: X) {
    Builtin.freeze(x);
  }

  // CHECK-L: freeze.verona:${LINE:+1}:3: error: Inference failed for method test3
  test3(x: A & (iso | imm)) {
    Builtin.freeze(x);
  }

  // CHECK-L: freeze.verona:${LINE:+1}:3: error: Inference failed for method test4
  test4(x: A & mut) {
    Builtin.freeze(x);
  }
}

